--- a/index.html
+++ b/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a href="/index.html">Header logo</a>
-        <ul>
-            <li><a href="">Link one</a></li>
-            <li><a href="">Link two</a></li>
-            <li><a href="">Link three</a></li>
-        </ul>
-    </header>
-    <section>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtet that goes here under the main title. It's a smaller font and the eolor is lower contrast</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <a href="/index.html">Header logo</a>
+            <nav class="nav-list">
+                <ul>
+                    <li><a href="">Link one</a></li>
+                    <li><a href="">Link two</a></li>
+                    <li><a href="">Link three</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <div class="intro">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the eolor is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="Currently just a place holder.">
+        </section>
+        <div class="card-display">
+            <h2>Some random information.</h2>
+            <div class="card-layout">
+                <div class="card">
+                    <img src="" alt="just a place holder.">
+                    <div>this is some subtext under an illustration or image</div>    
+                </div>
+                <div class="card">
+                    <img src="" alt="just a place holder.">
+                    <div>this is some subtext under an illustration or image</div>    
+                </div>
+                <div class="card">
+                    <img src="" alt="just a place holder.">
+                    <div>this is some subtext under an illustration or image</div>    
+                </div>
+                <div class="card">
+                    <img src="" alt="just a place holder.">
+                    <div>this is some subtext under an illustration or image</div>    
+                </div>
+            </div>
+        </div>
+        <div class="testimonial">
+            <p>This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will 
+                actually read it. Who knows? All I know is that is looks nice.
+                <span>-Thor, God of Thunder</span>
+            </p>
+        </div>
+        <div class="sign-up">
+            <div>
+                <h2>Call to action! It's Time!</h2>
+                <h3>Sign up for our product by clicking that button right over there!</h3>
+            </div>
             <button>Sign up</button>
         </div>
-        <img src="" alt="Currently just a place holder.">
-    </section>
-    <div>
-        <h2>Some random information.</h2>
-        <img src="" alt="just a place holder.">
-        <div>this is some subtext under an illustration or image</div>
-        <img src="" alt="just a place holder.">
-        <div>this is some subtext under an illustration or image</div>
-        <img src="" alt="just a place holder.">
-        <div>this is some subtext under an illustration or image</div>
-        <img src="" alt="just a place holder.">
-        <div>this is some subtext under an illustration or image</div>
-    </div>
-    <div>
-        <p>This is an inspiring quote, or a testimonial from a customer. 
-            Maybe it's just filling up space, or maybe people will 
-            actually read it. Who knows? All I know is that is looks nice.
-            <span>-Thor, God of Thunder</span>
-        </p>
-    </div>
-    <div>
-        <div>
-            <h2>Call to action! It's Time!</h2>
-            <h3>Sign up for our product by clicking that button right over there!</h3>
-        </div>
-        <button>Sign up</button>
-    </div>
-    <footer>
-        <h1>Copyright c The Odin Project 2021</h1>
-    </footer>
-</body>
+        <footer>
+            <div>Copyright c The Odin Project 2021</div>
+        </footer>
+    </body>
 </html>
