--- a/index.html
+++ b/index.html
@@ -19,34 +19,34 @@
         </header>
         <section>
             <div class="intro">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the eolor is lower contrast</p>
+                <h1>My Photography portfolio</h1>
+                <p>I'm relatively new to Photography. This portfolio will highlight some of my best work.</p>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="Currently just a place holder.">
+            <img src="./images/meInTheSun.jpeg" alt="Currently just a place holder.">
         </section>
         <div class="card-display">
-            <h2>Some random information.</h2>
+            <h2>Some of my favorite shots</h2>
             <div class="card-layout">
                 <div class="card">
-                    <img src="" alt="just a place holder.">
-                    <div>this is some subtext under an illustration or image</div>    
+                    <img src="./images/lateToBloom.jpg" alt="just a place holder.">
+                    <div class="card-text">this is some subtext under an illustration or image</div>    
                 </div>
                 <div class="card">
-                    <img src="" alt="just a place holder.">
-                    <div>this is some subtext under an illustration or image</div>    
+                    <img src="./images/halloweenMetal.jpg" alt="just a place holder.">
+                    <div class="card-text">this is some subtext under an illustration or image</div>    
                 </div>
                 <div class="card">
-                    <img src="" alt="just a place holder.">
-                    <div>this is some subtext under an illustration or image</div>    
+                    <img src="./images/pinkSpring.jpg" alt="just a place holder.">
+                    <div class="card-text">this is some subtext under an illustration or image</div>    
                 </div>
                 <div class="card">
-                    <img src="" alt="just a place holder.">
-                    <div>this is some subtext under an illustration or image</div>    
+                    <img src="./images/romance .jpg" alt="just a place holder.">
+                    <div class="card-text">this is some subtext under an illustration or image</div>    
                 </div>
             </div>
         </div>
-        <div class="testimonial">
+        <div class="statement">
             <p>This is an inspiring quote, or a testimonial from a customer. 
                 Maybe it's just filling up space, or maybe people will 
                 actually read it. Who knows? All I know is that is looks nice.
@@ -54,11 +54,13 @@
             </p>
         </div>
         <div class="sign-up">
-            <div>
-                <h2>Call to action! It's Time!</h2>
-                <h3>Sign up for our product by clicking that button right over there!</h3>
+            <div class="call-to-action">
+                <div>
+                    <h2>Call to action! It's Time!</h2>
+                    <h3>Sign up for our product by clicking that button right over there!</h3>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
         <footer>
             <div>Copyright c The Odin Project 2021</div>
