add and style page content
added context to the page to tell people what
the site is about.

styled the content added.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <header>
-            <a href="/index.html">Header logo</a>
+            <a href="index.html"><img src="./images/icon.png" alt="site icon"></a>
             <nav class="nav-list">
                 <ul>
-                    <li><a href="">Link one</a></li>
-                    <li><a href="">Link two</a></li>
-                    <li><a href="">Link three</a></li>
+                    <li><a href="#photos">photos</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#find-me">find me</a></li>
                 </ul>
             </nav>
         </header>
@@ -21,49 +21,58 @@
             <div class="intro">
                 <h1>My Photography portfolio</h1>
                 <p>I'm relatively new to Photography. This portfolio will highlight some of my best work.</p>
-                <button>Sign up</button>
             </div>
             <img src="./images/meInTheSun.jpeg" alt="Currently just a place holder.">
         </section>
-        <div class="card-display">
+        <div id="photos" class="card-display">
             <h2>Some of my favorite shots</h2>
             <div class="card-layout">
                 <div class="card">
                     <img src="./images/lateToBloom.jpg" alt="just a place holder.">
-                    <div class="card-text">this is some subtext under an illustration or image</div>    
+                    <div class="card-text">Every year my partner and I go to the local 
+                        Tulip Festival. This is my favorite shot that I've taken while 
+                        attending the festival.
+                    </div>    
                 </div>
                 <div class="card">
                     <img src="./images/halloweenMetal.jpg" alt="just a place holder.">
-                    <div class="card-text">this is some subtext under an illustration or image</div>    
+                    <div class="card-text">Such a silly Halloween prop. I had to get a 
+                        good shot of it.
+                    </div>    
                 </div>
                 <div class="card">
                     <img src="./images/pinkSpring.jpg" alt="just a place holder.">
-                    <div class="card-text">this is some subtext under an illustration or image</div>    
+                    <div class="card-text">Driving along the river one spring day, 
+                        I saw this beautiful tree in full bloom.
+                    </div>    
                 </div>
                 <div class="card">
                     <img src="./images/romance .jpg" alt="just a place holder.">
-                    <div class="card-text">this is some subtext under an illustration or image</div>    
+                    <div class="card-text">My partner and I did a Valentines Day shoot. 
+                        She's the one who got me into Photography and we had a lot of 
+                        fun doing this shoot. 
+                    </div>    
                 </div>
             </div>
         </div>
-        <div class="statement">
-            <p>This is an inspiring quote, or a testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will 
-                actually read it. Who knows? All I know is that is looks nice.
-                <span>-Thor, God of Thunder</span>
+        <div id="about" class="statement">
+            <p>Growing up I never was interested in any real Art mediums. Now that I've 
+                been introduced to Photography I find myself increasingly interested in 
+                different art forms Photography definitely being my favorite.
             </p>
+            <div>-Dan S, Amateur Photographer</div>
         </div>
-        <div class="sign-up">
+        <div id="find-me" class="sign-up">
             <div class="call-to-action">
                 <div>
-                    <h2>Call to action! It's Time!</h2>
-                    <h3>Sign up for our product by clicking that button right over there!</h3>
+                    <h2>Find the rest of my work on Viewbug</h2>
+                    <h3>Many professional and amateur Photographers post their work here.</h3>
                 </div>
-                <button>Sign up</button>
+                <a href="viewbug.com">Viewbug</a>
             </div>
         </div>
         <footer>
-            <div>Copyright c The Odin Project 2021</div>
+            <div>Copyright &#169; Dan s 2023</div>
         </footer>
     </body>
 </html>
