add external link
added an external link to viewbug website in the find
me section of the page.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h2>Find the rest of my work on Viewbug</h2>
                     <h3>Many professional and amateur Photographers post their work here.</h3>
                 </div>
-                <a href="viewbug.com">Viewbug</a>
+                <a href="https://www.viewbug.com/member/dan_stj2020">Viewbug</a>
             </div>
         </div>
         <footer>
